<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.madreain.androiddream.ui.Activity.FeedBackActivity">

    <include
        android:id="@+id/include"
        layout="@layout/actionbar" />

    <com.madreain.androiddream.views.LineEditText
        android:id="@+id/edt_feedback"
        style="@style/ShareKnowledge"
        android:layout_height="@dimen/dp150"
        android:gravity="start"
        android:layout_below="@+id/include"
        android:hint="@string/feedback"
        android:maxLines="6"
        android:paddingBottom="@dimen/dp10"
        android:paddingTop="@dimen/dp10"
        android:singleLine="false" />

    <com.madreain.androiddream.views.LineEditText
        android:id="@+id/edt_author"
        style="@style/ShareKnowledge"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_feedback"
        android:hint="@string/feedback_author"
        android:paddingBottom="@dimen/dp10"
        android:paddingTop="@dimen/dp10" />

    <TextView
        android:id="@+id/txt_send"
        android:layout_width="@dimen/dp200"
        android:layout_height="@dimen/dp48"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/dp20"
        android:background="@drawable/shape_blue"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/White" />

</RelativeLayout>
